# shader-engine

./: .directory  .gitignore  README.md  imgui.ini
source/: CMakeLists.txt
source/cmake/: Util.cmake
source/include/Core/Engine/: Camera.h  ElementBuffer.h  Engine.h  ImGUIWindow.h  Logger.h  Mesh.h  Model.h  Physics.h  RigidBody.h  Shader.h  Texture2D.h  UI.h  UIVisibility.h  VertexArray.h  VertexBuffer.h
source/include/Vendors/glad/glad/: glad.h
source/shaders/: main.glsl
source/src/Core/: main.cpp
source/src/Core/Engine/Camera/: CMakeLists.txt  Camera.cpp
source/src/Core/Engine/ElementBuffer/: CMakeLists.txt  ElementBuffer.cpp
source/src/Core/Engine/Engine/: CMakeLists.txt  Engine.cpp
source/src/Core/Engine/ImGUIWindow/: CMakeLists.txt  ImGUIWindow.cpp
source/src/Core/Engine/Logger/: CMakeLists.txt  Logger.cpp
source/src/Core/Engine/Mesh/: CMakeLists.txt  Mesh.cpp
source/src/Core/Engine/Model/: CMakeLists.txt  Model.cpp
source/src/Core/Engine/Physics/: CMakeLists.txt  Physics.cpp  RigidBody.cpp
source/src/Core/Engine/Shader/: CMakeLists.txt  Shader.cpp
source/src/Core/Engine/Texture2D/: CMakeLists.txt  Texture2D.cpp
source/src/Core/Engine/UI/: CMakeLists.txt  UI.cpp
source/src/Core/Engine/VertexArray/: CMakeLists.txt  VertexArray.cpp
source/src/Core/Engine/VertexBuffer/: CMakeLists.txt  VertexBuffer.cpp
source/src/Vendors/glad/: CMakeLists.txt  glad.c
source/src/Vendors/imgui/: CMakeLists.txt  imgui_demo.cpp
source/src/Vendors/nfd/: CMakeLists.txt
source/src/Vendors/stb_image/: CMakeLists.txt
